--- a/index.html
+++ b/index.html
@@ -240,29 +240,22 @@
           </div>
         </section>
 
-        <section id="videoGallery" class="container py-4">
-          <h4 class="text-center mb-4">---VIDEOS---</h4>
-          <div class="row g-4"> <!-- g-4 adds gap between columns -->
-            <!-- YouTube Video 1 -->
-            <div class="col-lg-4 col-md-6 col-12">
-              <iframe class="w-100" height="315" src="https://www.youtube.com/embed/0geOjek9IvI"
-                title="JBL AUTHENTIC 300 ADVERTISEMENT | NB WORLD" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-
-            <!-- YouTube Video 2 -->
-            <div class="col-lg-4 col-md-6 col-12">
-                <iframe class="w-100" height="315" src="https://www.youtube.com/embed/wuol80gToVs" title="CAFE ADVERTISEMENT | THE OBED CAFE AMTALA | NB WORLD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-
-            <!-- YouTube Video 3 -->
-            <div class="col-lg-4 col-md-6 col-12">
-              <iframe class="w-100" height="315" src="https://www.youtube.com/embed/pX7VRfeQE34" title="SALON ADVERTISEMENTS VIDEO | Glam And Glow | NB WORLD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+        <section id="videoGallery">
+          <h4>
+            <center>---VIDEOS---</center>
+          </h4>
+          <div class="gallerys">
+            <video class="gallery-item" data-src="assets/video/v1.mp4" controls muted>
+              <source src="assets/video/v1.mp4" type="video/mp4">
+            </video>
+            <video class="gallery-item" data-src="assets/video/v2.mp4" controls muted>
+              <source src="assets/video/v2.mp4" type="video/mp4">
+            </video>
+            <video class="gallery-item" data-src="assets/video/v3.mp4" controls muted>
+              <source src="assets/video/v3.mp4" type="video/mp4">
+            </video>
           </div>
         </section>
-
 
         <!-- Modal -->
         <div class="modal" id="modal">
@@ -451,7 +444,7 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 1" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-2.jpg" alt="Reviewer 1" class="reviewer-photo" />
                 <p class="reviewer-name">Kakali Mondal Das</p>
               </div>
             </div>
@@ -465,7 +458,7 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 2" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-1.jpg" alt="Reviewer 2" class="reviewer-photo" />
                 <p class="reviewer-name">Pranoy Sarkar</p>
               </div>
             </div>
@@ -479,16 +472,14 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 3" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-1.jpg" alt="Reviewer 3" class="reviewer-photo" />
                 <p class="reviewer-name">Amit Sah</p>
               </div>
             </div>
             <div class="review-card">
-              <p class="review-text">"NB creation is a very nice graphic design company of West Bengal.They have worked
-                on some my
+              <p class="review-text">"NB creation is a very nice graphic design company of West Bengal.They have worked on some my
                 projects & logo. I would
-                recommend them to everyone because it's not only about the company but also the people.They are very
-                friendly, gives
+                recommend them to everyone because it's not only about the company but also the people.They are very friendly, gives
                 genuine guidance & work whole
                 heartedly."</p>
               <div class="review-stars">
@@ -496,10 +487,10 @@
                 <span class="star full"></span>
                 <span class="star full"></span>
                 <span class="star full"></span>
-                <span class="star full"></span>
+                <span class="star empty"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 3" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-2.jpg" alt="Reviewer 3" class="reviewer-photo" />
                 <p class="reviewer-name">Sohini Mukherjee</p>
               </div>
             </div>
@@ -513,7 +504,7 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 3" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-2.jpg" alt="Reviewer 3" class="reviewer-photo" />
                 <p class="reviewer-name">Susmita Mondal</p>
               </div>
             </div>
