New image added

--- a/index.html
+++ b/index.html
@@ -237,25 +237,41 @@
             <img src="assets/img/galleryImg/GI51.png" alt="Image 51" class="gallery-item" data-type="image">
             <img src="assets/img/galleryImg/GI52.png" alt="Image 52" class="gallery-item" data-type="image">
             <img src="assets/img/galleryImg/GI53.png" alt="Image 53" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI54.png" alt="Image 54" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI55.png" alt="Image 55" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI56.jpg" alt="Image 56" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI57.jpg" alt="Image 57" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI58.png" alt="Image 58" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI59.png" alt="Image 59" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI60.png" alt="Image 60" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI61.png" alt="Image 61" class="gallery-item" data-type="image">
+            <img src="assets/img/galleryImg/GI62.png" alt="Image 62" class="gallery-item" data-type="image">
           </div>
         </section>
 
-        <section id="videoGallery">
-          <h4>
-            <center>---VIDEOS---</center>
-          </h4>
-          <div class="gallerys">
-            <video class="gallery-item" data-src="assets/video/v1.mp4" controls muted>
-              <source src="assets/video/v1.mp4" type="video/mp4">
-            </video>
-            <video class="gallery-item" data-src="assets/video/v2.mp4" controls muted>
-              <source src="assets/video/v2.mp4" type="video/mp4">
-            </video>
-            <video class="gallery-item" data-src="assets/video/v3.mp4" controls muted>
-              <source src="assets/video/v3.mp4" type="video/mp4">
-            </video>
+        <section id="videoGallery" class="container py-4">
+          <h4 class="text-center mb-4">---VIDEOS---</h4>
+          <div class="row g-4"> <!-- g-4 adds gap between columns -->
+            <!-- YouTube Video 1 -->
+            <div class="col-lg-4 col-md-6 col-12">
+              <iframe class="w-100" height="315" src="https://www.youtube.com/embed/0geOjek9IvI"
+                title="JBL AUTHENTIC 300 ADVERTISEMENT | NB WORLD" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
+            <!-- YouTube Video 2 -->
+            <div class="col-lg-4 col-md-6 col-12">
+                <iframe class="w-100" height="315" src="https://www.youtube.com/embed/wuol80gToVs" title="CAFE ADVERTISEMENT | THE OBED CAFE AMTALA | NB WORLD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
+            <!-- YouTube Video 3 -->
+            <div class="col-lg-4 col-md-6 col-12">
+              <iframe class="w-100" height="315" src="https://www.youtube.com/embed/pX7VRfeQE34" title="SALON ADVERTISEMENTS VIDEO | Glam And Glow | NB WORLD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
           </div>
         </section>
+
 
         <!-- Modal -->
         <div class="modal" id="modal">
@@ -444,7 +460,7 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-2.jpg" alt="Reviewer 1" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 1" class="reviewer-photo" />
                 <p class="reviewer-name">Kakali Mondal Das</p>
               </div>
             </div>
@@ -458,7 +474,7 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-1.jpg" alt="Reviewer 2" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 2" class="reviewer-photo" />
                 <p class="reviewer-name">Pranoy Sarkar</p>
               </div>
             </div>
@@ -472,14 +488,16 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-1.jpg" alt="Reviewer 3" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 3" class="reviewer-photo" />
                 <p class="reviewer-name">Amit Sah</p>
               </div>
             </div>
             <div class="review-card">
-              <p class="review-text">"NB creation is a very nice graphic design company of West Bengal.They have worked on some my
+              <p class="review-text">"NB creation is a very nice graphic design company of West Bengal.They have worked
+                on some my
                 projects & logo. I would
-                recommend them to everyone because it's not only about the company but also the people.They are very friendly, gives
+                recommend them to everyone because it's not only about the company but also the people.They are very
+                friendly, gives
                 genuine guidance & work whole
                 heartedly."</p>
               <div class="review-stars">
@@ -487,10 +505,10 @@
                 <span class="star full"></span>
                 <span class="star full"></span>
                 <span class="star full"></span>
-                <span class="star empty"></span>
+                <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-2.jpg" alt="Reviewer 3" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 3" class="reviewer-photo" />
                 <p class="reviewer-name">Sohini Mukherjee</p>
               </div>
             </div>
@@ -504,7 +522,7 @@
                 <span class="star full"></span>
               </div>
               <div class="reviewer-info">
-                <img src="assets/img/testimonials/testimonials-2.jpg" alt="Reviewer 3" class="reviewer-photo" />
+                <img src="assets/img/testimonials/testimonials-6.png" alt="Reviewer 3" class="reviewer-photo" />
                 <p class="reviewer-name">Susmita Mondal</p>
               </div>
             </div>
