--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+  <header id="header" class="header fixed-top">
+    <div
+      class="container-fluid container-xl position-relative d-xl-flex align-items-xl-center justify-content-xl-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo3.png" alt="">
-        <h1 class="sitename">WORLD</h1>
+        <img src="assets/img/logo3.png" alt="" width="300px">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -85,8 +84,8 @@
       </nav>
 
     </div>
-
   </header>
+
 
   <main class="main">
 
@@ -262,12 +261,18 @@
 
             <!-- YouTube Video 2 -->
             <div class="col-lg-4 col-md-6 col-12">
-                <iframe class="w-100" height="315" src="https://www.youtube.com/embed/wuol80gToVs" title="CAFE ADVERTISEMENT | THE OBED CAFE AMTALA | NB WORLD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe class="w-100" height="315" src="https://www.youtube.com/embed/wuol80gToVs"
+                title="CAFE ADVERTISEMENT | THE OBED CAFE AMTALA | NB WORLD" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <!-- YouTube Video 3 -->
             <div class="col-lg-4 col-md-6 col-12">
-              <iframe class="w-100" height="315" src="https://www.youtube.com/embed/pX7VRfeQE34" title="SALON ADVERTISEMENTS VIDEO | Glam And Glow | NB WORLD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe class="w-100" height="315" src="https://www.youtube.com/embed/pX7VRfeQE34"
+                title="SALON ADVERTISEMENTS VIDEO | Glam And Glow | NB WORLD" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
           </div>
         </section>
