image position channged

--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
 
             <!-- 📸 Photos -->
             <!-- 📸 Photos -->
-            <a href="assets/img/galleryImg/GI1.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            <!-- <a href="assets/img/galleryImg/GI1.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI1.jpg" alt="Image 1">
-            </a>
-            <a href="assets/img/galleryImg/GI2.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            </a> -->
+            <!-- <a href="assets/img/galleryImg/GI2.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI2.jpg" alt="Image 2">
-            </a>
-            <a href="assets/img/galleryImg/GI3.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            </a> -->
+            <!-- <a href="assets/img/galleryImg/GI3.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI3.jpg" alt="Image 3">
             </a>
             <a href="assets/img/galleryImg/GI4.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
@@ -207,37 +207,37 @@
             </a>
             <a href="assets/img/galleryImg/GI6.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI6.png" alt="Image 6">
-            </a>
-            <a href="assets/img/galleryImg/GI7.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            </a> -->
+            <!-- <a href="assets/img/galleryImg/GI7.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI7.jpg" alt="Image 7">
-            </a>
+            </a> -->
             <a href="assets/img/galleryImg/GI8.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI8.jpg" alt="Image 8">
             </a>
             <a href="assets/img/galleryImg/GI9.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI9.jpg" alt="Image 9">
             </a>
-            <a href="assets/img/galleryImg/GI10.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            <!-- <a href="assets/img/galleryImg/GI10.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI10.png" alt="Image 10">
-            </a>
+            </a> -->
             <a href="assets/img/galleryImg/GI11.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI11.png" alt="Image 11">
             </a>
             <a href="assets/img/galleryImg/GI12.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI12.png" alt="Image 12">
             </a>
-            <a href="assets/img/galleryImg/GI13.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            <!-- <a href="assets/img/galleryImg/GI13.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI13.jpg" alt="Image 13">
-            </a>
+            </a> -->
             <a href="assets/img/galleryImg/GI14.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI14.png" alt="Image 14">
             </a>
             <a href="assets/img/galleryImg/GI15.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI15.jpg" alt="Image 15">
             </a>
-            <a href="assets/img/galleryImg/GI16.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            <!-- <a href="assets/img/galleryImg/GI16.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI16.png" alt="Image 16">
-            </a>
+            </a> -->
             <a href="assets/img/galleryImg/GI17.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI17.jpg" alt="Image 17">
             </a>
@@ -265,9 +265,9 @@
             <a href="assets/img/galleryImg/GI25.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI25.jpg" alt="Image 25">
             </a>
-            <a href="assets/img/galleryImg/GI26.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            <!-- <a href="assets/img/galleryImg/GI26.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI26.jpg" alt="Image 26">
-            </a>
+            </a> -->
             <a href="assets/img/galleryImg/GI27.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI27.jpg" alt="Image 27">
             </a>
@@ -322,9 +322,9 @@
             <a href="assets/img/galleryImg/GI45.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI45.jpg" alt="Image 45">
             </a>
-            <a href="assets/img/galleryImg/GI46.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            <!-- <a href="assets/img/galleryImg/GI46.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI46.png" alt="Image 46">
-            </a>
+            </a> -->
             <a href="assets/img/galleryImg/GI47.jpg" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI47.jpg" alt="Image 47">
             </a>
@@ -346,9 +346,9 @@
             <a href="assets/img/galleryImg/GI53.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI53.png" alt="Image 53">
             </a>
-            <a href="assets/img/galleryImg/GI54.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
+            <!-- <a href="assets/img/galleryImg/GI54.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI54.png" alt="Image 54">
-            </a>
+            </a> -->
             <a href="assets/img/galleryImg/GI55.png" class="glightbox mg-item photo" data-gallery="nbworld-gallery">
               <img src="assets/img/galleryImg/GI55.png" alt="Image 55">
             </a>
@@ -474,6 +474,45 @@
             </a>
 
             <!-- 🧩 Logos -->
+             <a href="assets/img/logoGallery/GI1.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI1.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI2.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI2.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI3.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI3.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI4.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI4.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI5.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI5.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI6.png" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI6.png" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI7.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI7.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI10.png" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI10.png" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI13.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI13.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI16.png" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI16.png" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI26.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI26.jpg" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI46.png" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI46.png" alt="Logo 1">
+            </a>
+            <a href="assets/img/logoGallery/GI54.png" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
+              <img src="assets/img/logoGallery/GI54.png" alt="Logo 1">
+            </a>
             <a href="assets/img/logoGallery/l1.jpg" class="glightbox mg-item logo" data-gallery="nbworld-gallery">
               <img src="assets/img/logoGallery/l1.jpg" alt="Logo 1">
             </a>
